[gd_scene load_steps=3 format=3 uid="uid://bl1t33abu7kl8"]

[ext_resource type="Script" path="res://src/UI/Dialogs/ImageEffects/InvertColorsDialog.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bybqhhayl5ay5" path="res://src/UI/Dialogs/ImageEffects/ImageEffectParent.tscn" id="2"]

[node name="InvertColorsDialog" instance=ExtResource("2")]
title = "Invert Colors"
script = ExtResource("1")

[node name="ShowAnimate" parent="VBoxContainer" index="0"]
visible = false

[node name="RGBAContainer" type="HBoxContainer" parent="VBoxContainer" index="2"]
layout_mode = 2
alignment = 1

[node name="RButton" type="Button" parent="VBoxContainer/RGBAContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Modify Red Channel"
mouse_default_cursor_shape = 2
toggle_mode = true
text = "R"

[node name="GButton" type="Button" parent="VBoxContainer/RGBAContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Modify Green Channel"
mouse_default_cursor_shape = 2
toggle_mode = true
text = "G"

[node name="BButton" type="Button" parent="VBoxContainer/RGBAContainer" index="2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Modify Blue Channel"
mouse_default_cursor_shape = 2
toggle_mode = true
text = "B"

[node name="AButton" type="Button" parent="VBoxContainer/RGBAContainer" index="3"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Modify Alpha Channel"
mouse_default_cursor_shape = 2
toggle_mode = true
text = "A"

[connection signal="toggled" from="VBoxContainer/RGBAContainer/RButton" to="." method="_on_RButton_toggled"]
[connection signal="toggled" from="VBoxContainer/RGBAContainer/GButton" to="." method="_on_GButton_toggled"]
[connection signal="toggled" from="VBoxContainer/RGBAContainer/BButton" to="." method="_on_BButton_toggled"]
[connection signal="toggled" from="VBoxContainer/RGBAContainer/AButton" to="." method="_on_AButton_toggled"]
